--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
     <title>Frontend Mentor | Four card feature section</title>
   </head>
   <body>
-    <div class="container">
-      <header role="heading" class="header">
+    <div role="main" class="container">
+      <header class="header">
         <h1 class="header__title">
           <span class="header__title-thin">Reliable, efficient delivery</span>
           <span>Powered by Technology</span>
@@ -34,7 +34,7 @@
         </p>
       </header>
 
-      <div role="main" class="card-wrapper">
+      <div class="card-wrapper">
         <div class="card-wrapper__column">
           <div class="card card-cyan">
             <h2 class="card__title">Supervisor</h2>
