--- a/index.html
+++ b/index.html
@@ -23,16 +23,16 @@
   </head>
   <body>
     <div role="main" class="container">
-      <header class="header">
-        <h1 class="header__title">
-          <span class="header__title-thin">Reliable, efficient delivery</span>
+      <div class="heading-wrapper">
+        <h1 class="title">
+          <span class="title-thin">Reliable, efficient delivery</span>
           <span>Powered by Technology</span>
         </h1>
-        <p class="header__description">
+        <p class="description">
           Our Artificial Intelligence powered tools use millions of project data
           points to ensure that your project is successful
         </p>
-      </header>
+      </div>
 
       <div class="card-wrapper">
         <div class="card-wrapper__column">
@@ -84,12 +84,12 @@
         </div>
       </div>
 
-      <footer class="attribution">
+      <div class="attribution">
         Challenge by
         <a href="https://www.frontendmentor.io?ref=challenge">Frontend Mentor</a
         >. Coded by
         <a href="https://www.github.com/mehmeterogul">Mehmet Eroğul</a>.
-      </footer>
+      </div>
     </div>
   </body>
 </html>
